# ha-modbus-manager

./: .gitignore  LICENSE  README.md  hacs.json  modbus_monitor.py  pyproject.toml  simulator-preset.json
.github/workflows/: codeql.yml  hacs.yaml  hassfest.yaml  release.yml  tests.yaml
custom_components/modbus_manager/: README.md  __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  cover.py  entity_base.py  manifest.json  number.py  sensor.py  strings.json  switch.py
custom_components/modbus_manager/device_definitions/: eastron_sdm120m.yaml  eastron_sdm230_modbus.yaml  eastron_sdm630_modbus.yaml  eletechsup_n4aia04.yaml  eletechsup_r4cva02.yaml  eletechsup_r4ivb02.yaml  growatt_mic_2500tl_x.yaml  growatt_min_6000tl_xh.yaml  growatt_mod_10ktl3_xh.yaml  growatt_mod_6000tl_x.yaml  growatt_sph_3600tl_bl_up.yaml  shenzen_lc_relay_input_board.yaml  sofarsolar_ktl_x.yaml  sofarsolar_tl_g3.yaml
custom_components/modbus_manager/modbus_device/: __init__.py  decoder.py  loader.py  model.py
custom_components/modbus_manager/translations/: en.json  pl.json
docs/: NEW_DEVICE.md  YAML_FORMAT.md
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_decoder.py  test_number.py  test_sensor.py
